<resources>
    <string name="app_name">Lecturas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aplicacion Movil Comercial</string>
    <string name="nav_header_subtitle">Comision de Agua Potable y Alcantarillado</string>
    <string name="nav_header_desc">Navegador de App Comercial</string>
    <string name="action_settings">Configurar IP</string>
    <string name="etuser">Usuario</string>
    <string name="etpass">Contraseña</string>
    <string name="button">Acceder</string>
    <string name="title_activity_navigation_draw_activiy">Sistema Movil de Lecturas</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Agregar Lecturas</string>
    <string name="menu_slideshow">Lista de Lecturas</string>
    <string name="menu_tools">Editar Lectura</string>
    <string name="menu_share">Cedula de Verificacion</string>
    <string name="menu_send">Salir</string>

    <string name="nombre">Nombre</string>
    <string name="buton_registrar">Registrar</string>
    <string name="buton_Importar">Importar Catalogo Medidores</string>
    <string name="buton_Exportar">Exportar Todo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="importar">Importar Data</string>
    <string name="ruta">Ruta Actual</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="generalesFragment">Datos Generales</string>
    <string name="tarifaFragment">Datos Tarifas</string>
    <string name="tomasFragment">Datos Tomas</string>
    <string name="figasFragment">Datos de Fugas</string>

    <string name="appbar_scriolling_view_behavior">appbar_scriolling_view_behavior</string>
    <string name="cerrar_app">Cerrar App</string>

    <!-- Fragment Generales -->
    <string name="marco">Verificación del Predio</string>
    <string name="genContrato">Contrato o Cuenta:</string>
    <string name="genNombre">Nombre:</string>
    <string name="genDireccion">Dirección:</string>
    <string name="genCruzamientos">Cruzamientos</string>
    <string name="genColonia">Colonia o Fracc.</string>
    <string name="genManzana">Manzana</string>
    <string name="genLote">Lote</string>
    <string name="genBaldio">Lote/Ter. Baldio</string>
    <string name="genHabitada">Casa Habitada</string>
    <string name="genDeshabitada">Casa Deshabitada</string>
    <string name="genComercioF">Comercio o Negocio Funcionando</string>
    <string name="genComercioC">Comercio o Negocio Cerrado</string>
    <string name="genOtro">Otro</string>
    <string name="genOtroD">Descripcion de otro</string>
    <string name="genObservaciones">Observaciones</string>

    <!-- Fragment Tarifas -->
    <string name="tituloTarifa">Tipo de Tarifa    :</string>
    <string name="subtitulo1">Información del Sistema</string>
    <string name="subtitulo2">Verificación Física</string>
    <string name="domestico">Domestico</string>
    <string name="comercial">Comercial</string>
    <string name="hotelero">Hotelero</string>
    <string name="industrial">Industrial</string>
    <string name="serGenerals">Servicios Generales</string>
    <string name="sContrato">No Tiene Contrato</string>
    <string name="clandestino">Clandestino</string>
    <string name="subtitulo3">Anotar tipo de uso del lote</string>
    <string name="contenido">Terreno baldio,casa, cuartos o departamentos en renta, lavadero de atos, lavandería, dispensador de agua, abarotes, minisuper, subagencia, papelería, carnicería, frutería, panadería, taller(tipo de taller), etc.</string>

    <!-- Fragment Tomas -->
    <string name="tituloTomas">Tomas</string>
    <string name="medidor">Medidor</string>
    <string name="numMedidor">Núm. Medidor</string>
    <string name="mFuncionando">Medidor Funcionando</string>
    <string name="mDescompuesto">Medidor Descompuesto</string>
    <string name="mDesconectado">Medidor Desconectado - con Agua Directo</string>
    <string name="mRobado">Medidor Robado</string>
    <string name="mInaccesible">Medidor Inaccesible</string>
    <string name="mCancelado">Medidor Cancelado</string>
    <string name="tDirecta">Toma Directa</string>
    <string name="tomaDirecta">Toma Directa</string>
    <string name="tCancelada">Toma Cancelada</string>
    <string name="cOLote">Conectada a Otro Lote</string>
    <string name="tClandestina">Toma Clandestino, Conectado directo a la Red</string>
    <string name="Draef">D R A E F</string>
    <string name="dMCancelado">Medidor Cancelado Sin Agua</string>
    <string name="dTcancelada">Toma Cancelada Sin Agua</string>
    <string name="dConectadaOL">Conectado a otro Lote</string>
    <string name="dtClandestina">Toma Clandestino, Conectado directo a la Red</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
