<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tomasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloTomas"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medidor" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="  "
                        tools:text="   " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/nMedidor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/numMedidor" />

                    <EditText
                        android:id="@+id/etMedidor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:visibility="gone" />

                    <Switch
                        android:id="@+id/mFuncionando"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mFuncionando" />

                    <Switch
                        android:id="@+id/mDescompuesto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mDescompuesto" />

                    <Switch
                        android:id="@+id/mDesconectado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mDesconectado" />

                    <Switch
                        android:id="@+id/mRobado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mRobado" />

                    <Switch
                        android:id="@+id/mInaccesible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mInaccesible" />

                    <Spinner
                        android:id="@+id/tomasspinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <Switch
                        android:id="@+id/mCancelado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mCancelado" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tDirecta"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="  "
                        tools:text="   " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/tDirecta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tDirecta" />

                    <Switch
                        android:id="@+id/tCancelada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tCancelada" />

                    <Switch
                        android:id="@+id/tCoL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cOLote" />

                    <Switch
                        android:id="@+id/tClandestina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tClandestina" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Draef" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="  "
                        tools:text="   " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/dMCancelado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dMCancelado" />

                    <Switch
                        android:id="@+id/dTCancelada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dTcancelada" />

                    <Switch
                        android:id="@+id/dTCoL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dConectadaOL" />

                    <Switch
                        android:id="@+id/dTClandestina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dtClandestina" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>